Fixed annoying shift in splash-video

--- a/style.css
+++ b/style.css
@@ -58,6 +58,15 @@ html, body {
 	min-height: 100%;
 	position: relative;
 }
+#splash-video {
+    position: fixed;
+    right: 0;
+    bottom: 0;
+    min-width: 100%;
+    min-height: 100%;
+    width: auto;
+    height: auto;
+}
 #player {
     position: fixed;
     right: 0;
